added version to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "binarymoip",
   "name": "Binary MoIP",
+  "version": "0.1",
   "documentation": "https://www.home-assistant.io/components/binarymoip",
   "requirements": [
     "pybinarymoip==0.0.8"
